kubernetes/deployment.template.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${SERVICE_NAME}
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${SERVICE_NAME}
  template:
    metadata:
      labels:
        app: ${SERVICE_NAME}
    spec:
      containers:
        - image: ${IMAGE_NAME}
          name: ${SERVICE_NAME}
          resources:
            requests:
              memory: '1024Mi'
              cpu: '200m'
            limits:
              memory: '2048Mi'
              cpu: '2500m'
          ports:
            - containerPort: 4400
              name: http
          imagePullPolicy: Always

#---
## TODO find out how much of this is needed for a postgres container.
##
## Service Catalog Database Instance
##
#apiVersion: servicecatalog.k8s.io/v1beta1
#kind: ServiceInstance
#metadata:
#  name: ${SERVICE_NAME}-postgres-instance
#  namespace: ${NAMESPACE}
#spec:
#  #
#  # Get the value of this from 'svcat get classes'
#  #
#  clusterServiceClassExternalName: azure-postgresql-9-6-database
#
#  #
#  # The 'SKU'. Get the value of this from 'svc describe class <class name>'
#  #
#  clusterServicePlanExternalName: database
#
#  #
#  # Parameters.  Get these from here: https://github.com/Azure/open-service-broker-azure/blob/master/docs/modules/postgresql.md
#  # or 'svcat describe <class>/<plan>'
#  # e.g. 'svcat describe plan azure-postgresql-9-6-database/database'
#  #
#  parameters:
#    parentAlias: cnp-osba-postgres-server
#---
##
## The binding.  This will return the secret with connection details, etc.
##
#apiVersion: servicecatalog.k8s.io/v1beta1
#kind: ServiceBinding
#metadata:
#  name: ${SERVICE_NAME}-postgres-binding
#  namespace: ${NAMESPACE}
#spec:
#  instanceRef:
#    name: ${SERVICE_NAME}-postgres-instance
#  #
#  # This is the secret used above in your pod environment config
#  #
#  secretName: ${SERVICE_NAME}-postgres-secret
---
#
# Service
#
apiVersion: v1
kind: Service
metadata:
  name: ${SERVICE_NAME}
  namespace: ${NAMESPACE}
  labels:
    app: ${SERVICE_NAME}
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4400
  selector:
    app: ${SERVICE_NAME}
---
#
# INGRESS
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${SERVICE_NAME}
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: ${SERVICE_FQDN}
      http:
        paths:
          - path: /
            backend:
              serviceName: ${SERVICE_NAME}
              servicePort: 80
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shared-database
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shared-database
  template:
    metadata:
      labels:
        app: shared-database
    spec:
      containers:
        - image: postgres:10.5-alpine
          name: shared-database
          resources:
            requests:
              memory: '256Mi'
              cpu: '200m'
            limits:
              memory: '1024Mi'
              cpu: '1000m'
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d
              name: initdb
              readOnly: true
      volumes:
        - name: initdb
          configMap:
            name: shared-database-initdb
---
apiVersion: v1
kind: Service
metadata:
  name: shared-database
  namespace: ${NAMESPACE}
  labels:
    app: shared-database
spec:
  ports:
    - port: 5432
  selector:
    app: shared-database
  clusterIP: None
